@@ -1,5 +1,4 @@
 from ENTITIES.ITEMS.MELEE_WEAPON import MELEE_WEAPON
-from WORLD.GLOBAL_LISTS import ITEMS
 
 class LONGSWORD(MELEE_WEAPON):
 
