@@ -7,8 +7,8 @@ def DIRECTION(PLAYER, MOB):
     if PLAYER.POSITION == MOB.POSITION:
         return None
     else:
-        PLAYER_X, PLAYER_Y = PLAYER.POSITION
-        MOB_X, MOB_Y = MOB.POSITION
+        PLAYER_X, PLAYER_Y = PLAYER.POSITION[0:2]
+        MOB_X, MOB_Y = MOB.POSITION[0:2]
 
         DX = PLAYER_X - MOB_X
         DY = PLAYER_Y - MOB_Y
@@ -16,14 +16,14 @@ def DIRECTION(PLAYER, MOB):
         return VECTOR_DIRECTION(DX, DY)
 
 def MOVE(PLAYER, MOB, _DIRECTION):
-    MOB_LOCATION = LOCATION_ID(*MOB.POSITION)
-    PLAYER_LOCATION = LOCATION_ID(*PLAYER.POSITION)
+    MOB_LOCATION = LOCATION_ID(*MOB.POSITION[0:2])
+    PLAYER_LOCATION = LOCATION_ID(*PLAYER.POSITION[0:2])
     if MOB_LOCATION == PLAYER_LOCATION:
         START_IN_ROOM = True
     else:
         START_IN_ROOM = False
 
-    X_DISTANCE, Y_DISTANCE, X_DIRECTION, Y_DIRECTION = RELATIVE_LOCATION(*MOB.POSITION, *PLAYER.POSITION)
+    X_DISTANCE, Y_DISTANCE, X_DIRECTION, Y_DIRECTION = RELATIVE_LOCATION(*MOB.POSITION[0:2], *PLAYER.POSITION[0:2])
 
     if _DIRECTION in ["NORTH", "SOUTH"]:
         _DISTANCE = min(X_DISTANCE, MOB.SPEED)
@@ -31,13 +31,13 @@ def MOVE(PLAYER, MOB, _DIRECTION):
         _DISTANCE = min(Y_DISTANCE, MOB.SPEED)
     
     NEW_POSITION = MOB.MOVE(_DIRECTION, _DISTANCE)
-    if NEW_POSITION != MOB.POSITION:
-        MOB.POSITION = NEW_POSITION
-        if LOCATION_ID(*MOB.POSITION) == LOCATION_ID(*PLAYER.POSITION):
+    if NEW_POSITION != MOB.POSITION[0:2]:
+        MOB.POSITION[0:2] = NEW_POSITION
+        if LOCATION_ID(*MOB.POSITION[0:2]) == LOCATION_ID(*PLAYER.POSITION[0:2]):
             if START_IN_ROOM:
                 print(f"{MOB.NAME} moved {_DISTANCE*5} feet {_DIRECTION}.")
             else:
                 CURRENT_LOCATION = LOCATION_ID(*NEW_POSITION)
                 MOB_INDEX = MOBS.index(MOB)
-                X_DISTANCE, Y_DISTANCE, X_DIRECTION, Y_DIRECTION = RELATIVE_LOCATION(*PLAYER.POSITION, *MOB.POSITION)
+                X_DISTANCE, Y_DISTANCE, X_DIRECTION, Y_DIRECTION = RELATIVE_LOCATION(*PLAYER.POSITION[0:2], *MOB.POSITION[0:2])
                 print(f"{MOB.NAME} (ID: {MOB_INDEX}, HEALTH: {MOB.HEALTH}/{MOB.MAX_HEALTH}) entered the {CURRENT_LOCATION.DESCRIPTION}: {X_DISTANCE*5} feet {X_DIRECTION}, {Y_DISTANCE*5} feet {Y_DIRECTION}.")
