@@ -1,2 +1,0 @@
-
-COMBAT = False
