@@ -1,9 +1,10 @@
 from WORLD.LOCATION_ID import LOCATION_ID
 from LOGIC.MATH import RELATIVE_LOCATION
-from WORLD.GLOBAL_LISTS import MOBS, PLAYERS
+from WORLD.GLOBAL_LISTS import MOBS
+from LOGIC.GLOBAL_FLAGS import GLOBAL_FLAGS
 
 def MOB_INFO(PLAYER, MOB):
-    X_DISTANCE, Y_DISTANCE, X_DIRECTION, Y_DIRECTION = RELATIVE_LOCATION(*PLAYER.POSITION, *MOB.POSITION)
+    X_DISTANCE, Y_DISTANCE, X_DIRECTION, Y_DIRECTION = RELATIVE_LOCATION(*PLAYER.POSITION[0:2], *MOB.POSITION[0:2])
     _MOB_INFO = f"\t{MOB.NAME} (HP: {MOB.HEALTH}/{MOB.MAX_HEALTH}, AC: {MOB.ARMOR_CLASS}): {X_DISTANCE*5} feet {X_DIRECTION}, {Y_DISTANCE*5} feet {Y_DIRECTION}."
 
     INVENTORY = MOB.INVENTORY
@@ -21,6 +22,8 @@ def MOB_INFO(PLAYER, MOB):
 
 
 def GAME_DISPLAY(PLAYER):
+    global GLOBAL_FLAGS
+    LEVEL, REALM = GLOBAL_FLAGS["LEVEL"], GLOBAL_FLAGS["REALM"]
     # MOB_NAMES = []
     for MOB in MOBS:
         '''if MOB:
@@ -28,12 +31,14 @@ def GAME_DISPLAY(PLAYER):
         else:
             MOB_NAMES.append(MOB)'''
         if MOB == PLAYER:
-            CURRENT_LOCATION = LOCATION_ID(*MOB.POSITION)
-            print(f"\nHEALTH: {MOB.HEALTH}/{MOB.MAX_HEALTH}.")
-            print(f"ARMOR CLASS: {MOB.ARMOR_CLASS}")
-            print(f"LOCATION: {MOB.POSITION}")
-            print(f"{MOB.NAME} is in a {CURRENT_LOCATION.DESCRIPTION}.{CURRENT_LOCATION.DESCRIBE_LOCATION(MOB)}")
-        elif MOB and LOCATION_ID(*MOB.POSITION) == LOCATION_ID(*MOBS[0].POSITION):
+            print(LEVEL, REALM)
+            _POSITION = (*PLAYER.POSITION[0:2], LEVEL*2, REALM)
+            CURRENT_LOCATION = LOCATION_ID(*PLAYER.POSITION[0:2])
+            print(f"\nHEALTH: {PLAYER.HEALTH}/{PLAYER.MAX_HEALTH}.")
+            print(f"ARMOR CLASS: {PLAYER.ARMOR_CLASS}")
+            print(f"LOCATION: {_POSITION}")
+            print(f"{PLAYER.NAME} is in a {CURRENT_LOCATION.DESCRIPTION}.{CURRENT_LOCATION.DESCRIBE_LOCATION(PLAYER)}")
+        elif MOB and LOCATION_ID(*MOB.POSITION[0:2]) == LOCATION_ID(*PLAYER.POSITION[0:2]):
             # MOB_INDEX = MOBS.index(MOB)+1
             _MOB_INFO = MOB_INFO(PLAYER, MOB)
             print(_MOB_INFO)
